--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,6 +1,11 @@
+h2 {
+  font-size: 24px;
+  font-weight: normal;
+  color: grey;
+  text-transform: uppercase;
+}
 .wrapper {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px auto;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
