--- a/src/components/MainNav/MainNav.module.css
+++ b/src/components/MainNav/MainNav.module.css
@@ -1,6 +1,6 @@
 .link {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   text-decoration: none;
 
   margin-right: 20px;
@@ -8,7 +8,7 @@
 }
 
 .link:hover {
-  color: coral;
+  color: cornflowerblue;
 }
 .active {
   font-size: 18px;
@@ -16,5 +16,5 @@
   text-decoration: none;
 
   margin-right: 20px;
-  color: coral;
+  color: cornflowerblue;
 }
