--- a/src/components/UpdateModal/UpdateModal.module.css
+++ b/src/components/UpdateModal/UpdateModal.module.css
@@ -15,12 +15,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 8px;
+  gap: 12px;
   background-color: #fff;
   border: 1px solid grey;
   width: 360px;
   padding: 12px;
   border-radius: 6px;
+}
+.wrapper > h2 {
+  margin-bottom: 12px;
+  text-align: center;
 }
 .wrapper > input {
   height: 36px;
