--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -5,5 +5,10 @@
   text-align: center;
   padding-left: 20px;
   padding-right: 20px;
-  /* display: block; */
+}
+h1 {
+  font-size: 24px;
+  font-weight: normal;
+  color: grey;
+  text-transform: uppercase;
 }
